# gw-geo-stormbreaker

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md  alembic.ini  content.md  pyproject.toml  serverless.yml
.claude/commands/: start-implementation.md
.github/workflows/: ci.yml  web-ci.yml
docs/: architecture.md  m1-design.md  m2-design.md  m3-design.md  m4-design.md  prd.md  trd.md  ui-spec.md
docs/tasks/: M0-T01-tooling-ci.md  M0-T02-domain-models.md  M0-T03-config.md  M0-T04-db-migrations.md  M0-T05-cost-governor.md  M0-T06-engine-adapter-base.md  M0-T07-parse.md  M0-T08-perplexity-adapter.md  M0-T09-openai-adapter.md  M0-T10-adapter-contract-tests.md  M0-T11-discover.md  M0-T12-aggregate.md  M0-T13-runner.md  M0-T14-cli-lambda.md  M1-README.md  M1-T01-config-secrets.md  M1-T02-migrations.md  M1-T03-gemini-adapter.md  M1-T04-claude-adapter.md  M1-T05-copilot-adapter.md  M1-T06-deepseek-adapter.md  M1-T07-capture-seam.md  M1-T08-feed-queries.md  M1-T09-proxy-pool.md  M1-T10-account-pool.md  M1-T11-ai-overviews-adapter.md  M1-T12-chatgpt-adapter.md  M1-T13-grok-adapter.md  M1-T14-drift-canary.md  M1-T15-feed-rollup.md  M1-T16-live-capture-fleet.md  M1-T17-drift-schedule-handler.md  M1-T18-build-runtime-wiring.md  M1-T19-contract-completeness-ga.md  M2-README.md  M2-T01-config-secrets.md  M2-T02-migrations.md  M2-T03-auth-core.md  M2-T04-api-skeleton.md  M2-T05-lead-capture-pixel.md  (+58 more)
migrations/: env.py
migrations/versions/: 0001_init.py  0002_m1_drift_and_rollup.py  0003_m2_attribution_auth.py  0004_m3_ranking_content.py  0005_m4_seeding_adaptation_billing.py  0006_m3_kb_embeddings.py  0007_m5_billing_invoice_unique_period.py  0008_m5_llm_model_config.py
src/gw_geo/: __init__.py  cli.py
src/gw_geo/api/: app.py  auth.py  deps.py  schemas.py  wiring.py
src/gw_geo/attribution/: __init__.py  assisted.py  holdout.py  ingest.py  linkage.py  pipeline.py  referral.py  trigger.py
src/gw_geo/billing/: attribution_adapter.py  metering.py  pricing.py  trigger.py  views.py
src/gw_geo/capture/: __init__.py  antibot.py  (+6 more)
tests/: __init__.py  conftest.py  e2e_backend.py  test_cli.py  test_cli_adaptation_billing.py  test_cli_login.py  test_cli_rank.py  test_cli_rank_live.py  test_cli_schedule.py  test_cli_seed_discover.py  test_ga_runner.py  test_m4_e2e.py  test_migration_0008.py  test_wiring.py
tests/api/: conftest.py  schemas_uispec.py  test_app.py  test_attribution_flow.py  test_auth.py  test_brands.py  test_content_api.py  test_contract_fidelity.py  test_leadcapture.py  test_opportunities_api.py  test_pipeline_api.py  test_pixel.py  test_settings_api.py  test_visibility.py  test_wiring.py
tests/attribution/: test_assisted.py  test_holdout.py  test_ingest.py  test_linkage.py  test_pipeline.py  test_referral.py  test_trigger.py
tests/billing/: test_attribution_adapter.py  test_metering.py  test_pricing.py  test_trigger.py  test_views.py
tests/capture/: fakes.py  test_account_pool.py  test_antibot.py  test_base.py  test_browser_persistent.py  test_live.py  test_live_fleet.py  test_local.py  test_local_live.py  test_proxy_pool.py
tests/common/: test_budget.py  test_config.py  test_config_m2.py  test_config_m4.py  test_config_portkey.py  test_db.py  test_db_m2.py  test_db_m3.py  test_db_m4.py  test_db_m5.py  test_models.py  test_models_m3.py  test_portkey.py
tests/content/: test_approval.py  test_gateway.py  test_gateway_bedrock.py  test_generate.py  test_kb.py  test_llm_bedrock.py  test_llm_local.py  test_model_config.py  test_pipeline.py  test_pipeline_persistence.py
tests/handlers/: test_adaptation_handler.py  test_billing_handler.py  test_run_drift.py
tests/measurement/: test_aggregate.py  test_discover.py  test_feed.py  test_feed_rollup.py  test_parse.py  test_runner.py  test_trigger.py
tests/onboarding/: test_jobs.py  test_suggest.py
tests/orchestration/: test_adaptation_trigger.py  test_bandit.py  test_drift.py  test_effort.py  test_opportunities.py  test_opportunity_gen.py  test_ranking_gen.py  test_retrain.py  test_retrainer.py  test_reward.py  test_scheduler.py
tests/ranking/: test_bandit.py  test_dataset.py  test_features.py  test_fetch.py  test_labels.py  test_model.py  test_recommend.py  test_runner.py  test_sourcing.py
tests/seeding/: test_brief_llm.py  test_briefs.py  test_channels.py  test_compliance.py  test_corroboration.py  test_discovery.py  test_sourcemap.py  test_trigger.py  test_workflow.py
web/: .eslintrc.json  .gitignore  README.md  globals.d.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: ConfidenceBadge.test.tsx  ConfidenceBadge.tsx  EngineTable.tsx  ExportButton.tsx  MethodBreakdown.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx  PromptDrawer.tsx  RunMeasurementButton.tsx  Sidebar.tsx  SourceMap.tsx  TopBar.test.tsx  TopBar.tsx
web/data/: projects.json
web/e2e/: happy-path.spec.ts  login.spec.ts  onboarding.spec.ts  pipeline.spec.ts  tenancy.spec.ts  visibility.spec.ts
web/lib/: api.test.ts  api.ts  auth.ts  filters.tsx  types.ts  utils.ts
web/pixel/: gwgeo.test.ts  gwgeo.ts
web/public/: ai-index.json  llms-full.txt  llms.txt
web/sample-data/: project.json  reviews.json
web/scripts/: build-ai-index.mjs
web/test/: utils.tsx
(+192 files in other folders)
