[project]
name = "gw-geo-stormbreaker"
version = "0.0.1"
description = "GEO / AI-search visibility, attribution & execution service for the Stormbreaker platform"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "scipy>=1.13",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "moto>=5",
  "ruff>=0.6", "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# Spec-mandated test body (docs/tasks/M0-T06-*.md) uses semicolon-joined statements
# verbatim; keep the test byte-identical to the spec rather than reformatting it.
"tests/measurement/probe/test_base.py" = ["E702"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
[[tool.mypy.overrides]]
module = "gw_geo.common.*"
strict = true
