[project]
name = "gw-geo-stormbreaker"
version = "0.0.1"
description = "GEO / AI-search visibility, attribution & execution service for the Stormbreaker platform"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "scipy>=1.13",
  "boto3>=1.34",
  # Async capture fleet (M1-T07+). The `playwright` package is a normal dependency, but the
  # browser binaries it drives are NOT: run `playwright install` (or `playwright install
  # chromium`) as a one-time local/deploy setup step. The default test suite never launches a
  # browser (Playwright is imported lazily inside gw_geo.capture.browser methods, never at
  # module load) and does not require binaries to be installed.
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "moto>=5",
  "ruff>=0.6", "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# Spec-mandated test body (docs/tasks/M0-T06-*.md) uses semicolon-joined statements
# verbatim; keep the test byte-identical to the spec rather than reformatting it.
"tests/measurement/probe/test_base.py" = ["E702"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
[[tool.mypy.overrides]]
module = "gw_geo.common.*"
strict = true
