[project]
name = "gw-geo-stormbreaker"
version = "0.0.1"
description = "GEO / AI-search visibility, attribution & execution service for the Stormbreaker platform"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "scipy>=1.13",
  "boto3>=1.34",
  # Async capture fleet (M1-T07+). The `playwright` package is a normal dependency, but the
  # browser binaries it drives are NOT: run `playwright install` (or `playwright install
  # chromium`) as a one-time local/deploy setup step. The default test suite never launches a
  # browser (Playwright is imported lazily inside gw_geo.capture.browser methods, never at
  # module load) and does not require binaries to be installed.
  "playwright>=1.40",
  # DOM parser for the Playwright-surface adapters (M1-T11+): consumer-surface HTML is parsed
  # into `answer_text`/`cited_urls` via BeautifulSoup. `>=4.13` ships inline type hints
  # (py.typed), so no separate stub package is needed for mypy.
  "beautifulsoup4>=4.13",
  # API layer (M2-T03+): FastAPI serves the ui-spec §6 REST contract; Mangum wraps the same
  # ASGI app onto the existing Lambda target (no separate deploy path). argon2-cffi + PyJWT back
  # the self-contained backend auth (m2-design §7) -- no Clerk/Auth0 dependency.
  "fastapi>=0.115",
  "mangum>=0.17",
  "argon2-cffi>=23.1",
  "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "moto>=5",
  "ruff>=0.6", "mypy>=1.11",
  # M2-T21 e2e: uvicorn serves the seeded `create_app` for the Playwright run; jsonschema powers
  # the ui-spec §6 contract-fidelity test (tests/api/test_contract_fidelity.py).
  "uvicorn>=0.30", "jsonschema>=4.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# Spec-mandated test body (docs/tasks/M0-T06-*.md) uses semicolon-joined statements
# verbatim; keep the test byte-identical to the spec rather than reformatting it.
"tests/measurement/probe/test_base.py" = ["E702"]
# Spec-mandated test body (docs/tasks/M3-T03-*.md) uses a semicolon-joined statement
# verbatim; keep the test byte-identical to the spec rather than reformatting it.
"tests/common/test_models_m3.py" = ["E702"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: real browser/proxy/account fleet; deselected by default",
]

[tool.mypy]
python_version = "3.13"
[[tool.mypy.overrides]]
module = "gw_geo.common.*"
strict = true
